add the ol list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>practice-frist-github-repo</title>
 </head>
 <body>
-    
+    <h3>practice go on</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas illum voluptatibus similique facere esse, vel nemo maiores dolorum alias voluptas at? Rem, obcaecati eaque placeat vero excepturi optio expedita maxime accusantium exercitationem nulla iste perferendis soluta nemo impedit nesciunt at. Mollitia commodi sapiente dolorem molestias ipsa temporibus laboriosam dolore corrupti.</p>
+    <div>
+        <ol>git init</ol>
+        <ol>git add .</ol>
+        <ol>git commit - m"frist commrnt"</ol>
+        <ol>git branch -M main</ol>
+        <ol>git remote and origin</ol>
+        <ol>git push</ol>
+    </div>
 </body>
 </html>
