--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice-frist-github-repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
     <h3>practice go on</h3>
