add my ccs image

--- a/index.html
+++ b/index.html
@@ -17,5 +17,25 @@
         <ol>git remote and origin</ol>
         <ol>git push</ol>
     </div>
+    <div>
+        <h2>my frist travel vlog</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique velit eius iure ut voluptates incidunt, voluptatibus id porro, soluta mollitia commodi maiores? Velit optio ipsa itaque perferendis ex dolorum, quaerat corrupti deleniti ducimus id voluptates, unde facere dolorem quod dolor cum maxime nesciunt nulla. Fugiat reprehenderit perspiciatis voluptatem et?</p>
+    </div>
+    <div>
+        <h2>my second travel vlog</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique velit eius iure ut voluptates incidunt, voluptatibus id porro, soluta mollitia commodi maiores? Velit optio ipsa itaque perferendis ex dolorum, quaerat corrupti deleniti ducimus id voluptates, unde facere dolorem quod dolor cum maxime nesciunt nulla. Fugiat reprehenderit perspiciatis voluptatem et?</p>
+    </div>
+    <div>
+        <h2>my third travel vlog</h2>
+        <p class="bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique velit eius iure ut voluptates incidunt, voluptatibus id porro, soluta mollitia commodi maiores? Velit optio ipsa itaque perferendis ex dolorum, quaerat corrupti deleniti ducimus id voluptates, unde facere dolorem quod dolor cum maxime nesciunt nulla. Fugiat reprehenderit perspiciatis voluptatem et?</p>
+    </div>
+    <div>
+        <h2>my fourth travel vlog</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique velit eius iure ut voluptates incidunt, voluptatibus id porro, soluta mollitia commodi maiores? Velit optio ipsa itaque perferendis ex dolorum, quaerat corrupti deleniti ducimus id voluptates, unde facere dolorem quod dolor cum maxime nesciunt nulla. Fugiat reprehenderit perspiciatis voluptatem et?</p>
+    </div>
+    <div>
+        <h2>my fifth travel vlog</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam similique velit eius iure ut voluptates incidunt, voluptatibus id porro, soluta mollitia commodi maiores? Velit optio ipsa itaque perferendis ex dolorum, quaerat corrupti deleniti ducimus id voluptates, unde facere dolorem quod dolor cum maxime nesciunt nulla. Fugiat reprehenderit perspiciatis voluptatem et?</p>
+    </div>
 </body>
 </html>
